# nom-specialized

./: Cargo.toml  README.md
benches/: lookup_table.rs  lut.rs  multi_tag.rs  tag.rs  take_while1.rs
src/: avx.rs  combinators.rs  lib.rs  lut.rs
