[package]
name = "nom-specialized"
version = "0.1.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
#faster = {git = "https://github.com/AdamNiederer/faster" }

[dev-dependencies]
bencher = "0.1"
rand = "0.7"

[features]
sse2 = []

[[bench]]
name = "take_while1"
harness = false

[[bench]]
name = "lookup_table"
harness = false

[[bench]]
name = "tag"
harness = false
